commit 8